--- a/main-popup/main-popup.html
+++ b/main-popup/main-popup.html
@@ -13,12 +13,7 @@
         <div class="text-section-header">Tabmarks</div>
       </div>
       <div class="panel-section panel-section-list">
-        <div class="panel-list-item tabmarks-save-as-group">
-          <div class="icon"></div>
-          <div class="text">Save as group</div>
-          <div class="text-shortcut"></div>
-        </div>
-        <div class="panel-list-item tabmarks-create-empty-group">
+        <div class="panel-list-item tabmarks-create-group">
           <div class="icon"></div>
           <div class="text">Create empty group</div>
           <div class="text-shortcut"></div>
