Allow to close a group or save current tabs
Refs #4 #5

--- a/src/default-popup/default-popup.html
+++ b/src/default-popup/default-popup.html
@@ -13,13 +13,23 @@
         <div class="text-section-header">Tabmarks</div>
       </div>
       <div class="panel-section panel-section-list">
-        <div class="panel-list-item tabmarks-show-create-form">
+        <div id="group-list"></div>
+        <div class="panel-section-separator"></div>
+        <div class="panel-list-item tabmarks-close-group-link" style="display:none">
+          <div class="icon"></div>
+          <div class="text">Close group</div>
+          <div class="text-shortcut"></div>
+        </div>
+        <div class="panel-list-item tabmarks-create-from-tabs-link" style="display:none">
+          <div class="icon"></div>
+          <div class="text">Save tabs as group</div>
+          <div class="text-shortcut"></div>
+        </div>
+        <div class="panel-list-item tabmarks-create-empty-link">
           <div class="icon"></div>
           <div class="text">Create empty group</div>
           <div class="text-shortcut"></div>
         </div>
-        <div class="panel-section-separator"></div>
-        <div id="group-list"></div>
       </div>
     </div>
 
@@ -31,18 +41,25 @@
       </div>
     </template>
 
-    <form class="tabmarks-create-form" style="display: none;">
+    <form class="tabmarks-create-form" style="display:none">
       <div class="panel">
         <div class="panel-section panel-section-formElements">
           <div class="panel-formElements-item">
             <label for="groupName">Name:</label>
-            <input type="text" value="" id="groupName" />
+            <input type="text" value="" class="tabmarks-create-form-group-name" />
+          </div>
+          <div class="panel-formElements-item tabmarks-create-empty-warning">
+            Currently open tabs will be closed!
           </div>
         </div>
         <div class="panel-section panel-section-footer">
-          <div class="panel-section-footer-button tabmarks-create-form-cancel">Cancel</div>
+          <div class="panel-section-footer-button tabmarks-create-form-cancel">
+            Cancel
+          </div>
           <div class="panel-section-footer-separator"></div>
-          <div class="panel-section-footer-button default tabmarks-create-form-create">Create group</div>
+          <div class="panel-section-footer-button default tabmarks-create-form-create">
+            Create group
+          </div>
         </div>
       </div>
     </form>
