Add preferences link to default popup

--- a/src/default-popup/default-popup.html
+++ b/src/default-popup/default-popup.html
@@ -30,6 +30,11 @@
           <div class="text">Create empty group</div>
           <div class="text-shortcut"></div>
         </div>
+        <div class="panel-list-item tabmarks-preferences-link">
+          <div class="icon"></div>
+          <div class="text">Preferences</div>
+          <div class="text-shortcut"></div>
+        </div>
       </div>
     </div>
 
