--- a/src/options/options.html
+++ b/src/options/options.html
@@ -3,16 +3,31 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="options.css">
   </head>
 
   <body class="browser-style">
-    <form id="nameForm">
-      <label>Root folder name</label>
-      <input type="text" id="rootFolderName" >
-      <button type="button" id="nameEditButton">Edit</button>
-      <button type="button" id="nameCancelButton">Cancel</button>
-      <button type="submit" id="nameSaveButton">Save</button>
-    </form>
+    <div class="options-section panel-section panel-section-formElements">
+
+      <form id="nameForm" class="options-item panel-formElements-item">
+        <label class="options-label browser-style-label">Root folder name</label>
+        <div class="options-content">
+          <div class="options-content-field browser-style">
+            <input id="rootFolderName"
+                   type="text">
+          </div>
+          <div class="options-content-actions">
+            <button id="nameEditButton"
+                    type="button" class="browser-style">Edit</button>
+            <button id="nameCancelButton"
+                    type="button" class="browser-style">Cancel</button>
+            <button id="nameSaveButton"
+                    type="submit" class="browser-style">Save</button>
+          </div>
+        </div>
+      </form>
+
+    </div>
 
     <script src="../background/helpers/bookmarks.js"></script>
     <script src="options.js"></script>
