Use ES6 modules and bundle with webpack

--- a/src/default-popup/default-popup.html
+++ b/src/default-popup/default-popup.html
@@ -69,7 +69,7 @@
       </div>
     </form>
 
-    <script src="default-popup.js"></script>
+    <script src="index.js"></script>
   </body>
 
 </html>
