--- a/src/options/options.html
+++ b/src/options/options.html
@@ -53,9 +53,7 @@
 
     </div>
 
-    <script src="../background/helpers/bookmarks.js"></script>
-    <script src="import.js"></script>
-    <script src="options.js"></script>
+    <script src="index.js"></script>
   </body>
 
 </html>
